GN-186 Add margin bottom to back to top link to fix issue with link being hidden by footer in IE11

--- a/src/Main/BackToTop/BackToTop.module.scss
+++ b/src/Main/BackToTop/BackToTop.module.scss
@@ -20,6 +20,13 @@ $back-to-top-height: rem(
   z-index: 1;
 }
 
+// IE11 needs margin bottom applied or back to top link is hidden under footer
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .nav {
+    margin-bottom: rem($nds-spacing-large);
+  }
+}
+
 .anchor {
   display: block;
   line-height: rem($nds-spacing-medium);
